--- a/lab1/vite-project/package.json
+++ b/lab1/vite-project/package.json
@@ -4,16 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "generate": "node module-data-generator.cjs 15",
+    "generate": "node ./src/data/module-data-generator.cjs 15",
     "dev": "npm run generate && vite --force",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "bootstrap": "5.3.3"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
